change some data and title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <title>index</title>
+    <title>Larafolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -239,7 +239,7 @@
 
     <div class="section">
       <div class="title">
-        <h1>Hi I'm a Frond End Developer
+        <h1>Hi I'm a Full Stack Developer
           <span class="spanTitle">Nice to Meet You</span>
         </h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi suscipit accusantium doloremque necessitatibus vero a expedita excepturi vel cum provident.</p>
@@ -256,48 +256,49 @@
     </div>
 
     <div class="section-technologies">
-      <div class="card-technology">
-        <img src="img/sql.png" alt="SQL">
-        <p>Experience: <span>1 year</span> </p>
-      </div>
 
       <div class="card-technology">
         <img src="img/c++.png" alt="C++">
-        <p>Experience: <span>3 years</span> </p>
+        <p>Experience: <span>3 Years</span> </p>
+      </div>
+
+      <div class="card-technology">
+        <img src="img/sql.png" alt="SQL">
+        <p>Experience: <span>1 Year</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/html5.png" alt="HTML5">
-        <p>Experience: <span>1 year</span> </p>
+        <p>Experience: <span>1 Year</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/css3.png" alt="CSS3">
-        <p>Experience: <span>1 year</span> </p>
+        <p>Experience: <span>1 Year</span> </p>
       </div>
 
       <div class="card-technology">
-        <img src="img/js.png" alt="SQL">
-        <p>Experience: <span>1 year</span> </p>
+        <img src="img/js.png" alt="JS">
+        <p>Experience: <span>1 Year</span> </p>
       </div>
 
       <div class="card-technology">
-        <img src="img/php.png" alt="C++">
-        <p>Experience: <span>1 year</span> </p>
+        <img src="img/php.png" alt="PHP">
+        <p>Experience: <span>6 Months</span> </p>
       </div>
 
       <div class="card-technology">
-        <img src="img/laravel.png" alt="HTML5">
+        <img src="img/laravel.png" alt="LARAVEL">
         <p>Experience: <span>6 months</span> </p>
       </div>
 
       <div class="card-technology">
-        <img src="img/puntonet.png" alt="CSS3">
+        <img src="img/puntonet.png" alt=".NET">
         <p>Experience: <span>1 year</span> </p>
       </div>
 
       <div class="card-technology">
-        <img src="img/python.png" alt="CSS3">
+        <img src="img/python.png" alt="PYTHON">
         <p>Experience: <span>1 year</span> </p>
       </div>
 
