--- a/index.html
+++ b/index.html
@@ -140,8 +140,14 @@
     }
     @media (max-width: 430px) {
       .title {
-        width: 100%;
+        width: 90%;
         padding-top: 3rem;
+      }
+      .title h1 {
+        font-size: 2rem;
+      }
+      .title p {
+        width: 90%;
       }
     }
     .spanTitle {
@@ -173,11 +179,11 @@
     .section-technologies {
       display: flex;
       flex-direction: row;
-      width: 90%;
-      justify-content: space-around;
+      width: 99%;
+      justify-content: center;
       flex-wrap: wrap;
       margin: auto;
-      padding-top: 8rem;
+      padding-top: 10rem;
       padding-bottom: 8rem;
     }
     .card-technology img {
@@ -188,7 +194,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 0rem 0.5rem 6rem 0.5rem;
+      padding: 0rem 1.5rem 6rem 1.5rem;
     }
     .card-technology p {
       color: var(--normalTextColor);
@@ -242,7 +248,7 @@
         <h1>Hi I'm a Full Stack Developer
           <span class="spanTitle">Nice to Meet You</span>
         </h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi suscipit accusantium doloremque necessitatibus vero a expedita excepturi vel cum provident.</p>
+        <p>I am also a computer enginieer and I will be happy to work with you.</p>
         <svg class="particle1 floatParticle" width="3rem" height="3rem" viewbox="0 0 2 2">
           <polygon points="0.1,1.8 1,0.1 1.9,1.8 0.1,1.8" style="stroke:rgb(235, 115, 115);stroke-width:0.1;fill:rgba(0,0,0,0);" />
         </svg>
