--- a/index.html
+++ b/index.html
@@ -3,224 +3,9 @@
     <title>Larafolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css">
   </head>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     /* border: 1px red solid;*/
-    }
-    h1 {
-      font-size: 4rem;
-    }
-    :root {
-      --normalTextColor: rgb(82, 82, 82); 
-      --titleTextColor: rgb(0,0,0);
-      --secondTitleColor: rgb(150,0,0);
-    }
-    .header {
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      background-color: rgb(255, 255, 255);
-      width: 100%;
-      font-size: 1.2rem;
-      color: var(--normalTextColor);
-      display: flex;
-      justify-content: space-between;
-    }
-    ul {
-      list-style: none;
-    }
-    li {
-      float: left;
-      padding-right: 2rem;
-    }
-    li:hover {
-      color: red;
-      cursor: pointer;
-    }
-    li:last-child() {
-      padding-right: 0rem;
-    }
-    .links{
-      align-self: center;
-      padding-right: 5%;
-    }
-    .logo{
-      padding-left: 5%;
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      position: relative;
-      height: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-    .pielogo{
-      padding: 0;
-      margin: 0;
-      padding-left: 0.2rem;
-    }
-    #redP {
-      animation: redPoAni 5s infinite;
-    }
-    #blueP {
-      animation: bluePoAni 5s infinite;
-    }
-    @media (max-width:700px) {
-      li {
-        padding-right: 0.7rem;
-      }
-    }
-    @media (max-width:530px) {
-      .logo {
-        justify-content: center;
-      }
-      .links {
-        padding: 1rem;
-        padding-top: 1rem;
-        justify-content: center;
-      }
-      li {
-        float: left;
-        padding-left: 1rem;
-        padding-right: 1rem;
-      }
-      .header {
-        flex-direction: column;
-      }
-    }
-    @media (max-width:420px) {
-      li {
-        padding-left: 0;
-        padding-bottom: 1rem;
-        padding-top: 1rem;
-        width: 100%;
-        text-align: left;
-      }
-    }
-    @keyframes redPoAni {
-      50% {
-        translate: 1px;
-      }
-    }
-    @keyframes bluePoAni {
-      50% {
-        translate: -1px;
-      }
-    }
-    @keyframes floating {
-      50% {
-        transform: rotate(15deg);
-        transform: translateY(10px) rotate(15deg);
-      }
-    }
-
-    /*Section*/
-    .title p {
-      color: var(--normalTextColor);
-      font-size: 1.4rem;
-      width: 60%;
-      margin: auto;
-      padding-top: 3rem;
-    }
-    .title {
-      width: 60%;
-      margin: auto;
-      padding-top: 6rem;
-      text-align: center;
-      position: relative;
-    }
-    @media (max-width: 780px) {
-      .title {
-        width: 80%;
-      }
-    }
-    @media (max-width: 430px) {
-      .title {
-        width: 90%;
-        padding-top: 3rem;
-      }
-      .title h1 {
-        font-size: 2rem;
-      }
-      .title p {
-        width: 90%;
-      }
-    }
-    .spanTitle {
-      color: var(--secondTitleColor);
-    }
-    .particle1 {
-      top: 8%;
-      right: 20%;
-    }
-    .particle2 {
-      bottom: 1%;
-      right: -3%;
-    }
-    .particle3 {
-      top: 15%;
-      left: -5%;
-    }
-    .floatParticle {
-      z-index: -2;
-      position: absolute;
-      animation: floating 5s infinite;
-    }
-
-/*
-    .section-technologies * {
-      border: solid rgb(255, 221, 221) 0.5px;
-    }
-*/
-    .section-technologies {
-      display: flex;
-      flex-direction: row;
-      width: 99%;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin: auto;
-      padding-top: 10rem;
-      padding-bottom: 8rem;
-    }
-    .card-technology img {
-      height: 3rem;
-      padding-bottom: 0.5rem;
-    }
-    .card-technology {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 0rem 1.5rem 6rem 1.5rem;
-    }
-    .card-technology p {
-      color: var(--normalTextColor);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-    }
-    .card-technology span {
-      font-size: 1.2rem;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    footer {
-      width: 95%;
-      margin: auto;
-      padding-top: 1rem;
-      border-top: solid rgb(211, 211, 211) 1px;
-      color: rgb(148, 148, 148);
-    }
-    footer p {
-      padding: 0rem 0rem 2rem 0rem;
-      font-size: 0.9rem;
-    }
-
-  </style>
 
   <body>
 
@@ -236,9 +21,7 @@
       <div class="links">
         <ul>
           <li>Home</li>
-          <li>About Us</li>
-          <li>Random Link</li>
-          <li>Contact</li>
+
         </ul>
       </div>
     </div>
@@ -265,54 +48,84 @@
 
       <div class="card-technology">
         <img src="img/c++.png" alt="C++">
-        <p>Experience: <span>3 Years</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/sql.png" alt="SQL">
-        <p>Experience: <span>1 Year</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/html5.png" alt="HTML5">
-        <p>Experience: <span>1 Year</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/css3.png" alt="CSS3">
-        <p>Experience: <span>1 Year</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/js.png" alt="JS">
-        <p>Experience: <span>1 Year</span> </p>
+
       </div>
 
       <div class="card-technology">
         <img src="img/php.png" alt="PHP">
-        <p>Experience: <span>6 Months</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/laravel.png" alt="LARAVEL">
-        <p>Experience: <span>6 months</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/puntonet.png" alt=".NET">
-        <p>Experience: <span>1 year</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/python.png" alt="PYTHON">
-        <p>Experience: <span>1 year</span> </p>
       </div>
 
       <div class="card-technology">
         <img src="img/git.png" alt="CSS3">
-        <p>Experience: <span>6 months</span> </p>
       </div>
     </div>
+
+    <section class="projects-section">
+      <h2>Proyectos:</h2>
+      <div class="project-card">
+        <div class="text">
+          <h2 class="project-title">Financiera. (Responsive)</h2>
+          <p class="project-description">De un diseño que me entregaron, desarrollé la landing page de una empresa. Se utilizó (HTML, CSS y JavaScript). El layout lo desarrollé utilizando en su mayoría la tecnología de FlexBox <br> <a href="https://financiera-mx.com">Ir a página</a></p>
+        </div>
+        <div class="project-img">
+          <iframe src="https://financiera-mx.com" frameborder="0"></iframe>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="text">
+          <h2 class="project-title">Simple Page</h2>
+          <p class="project-description">Aquí practiqué conceptos de animación con css, y manipulación de los objetos del dom con javascript. <br> Además de jugar con las animaciones que puedes hacer con css y JavaScript</p>
+        </div>
+        <div class="project-img">
+          <iframe src="SimplePage/index.html" frameborder="0"></iframe>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="text">
+          <h2 class="project-title">Simple Page 2</h2>
+          <p class="project-description">Esta es uno de mis primeros acercamientos al desarrollo en html y css.</p>
+        </div>
+        <div class="project-img">
+          <iframe src="SimplePage2/index.html" frameborder="0"></iframe>
+        </div>
+      </div>
+    </section>
+
+    <section class="learning-section">
+      <h2>Actualmente aprendiendo:</h2>
+      <img src="img/reactnative.png" alt="">
+      <img src="img/vuejs.png" alt="" width="150px">
+    </section>
 
     <footer>
       <p>Ageus Inc. Copyright © 2022</p>
